--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.7",
     "multer": "^1.4.2"
+  },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   }
 }
