--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.7",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "socket.io": "^2.3.0"
   },
   "engines": {
     "node": "12.16.1",
